fixed signup form bug causing form control feedback to result in form overflow

--- a/frontend/src/styles/dark.css
+++ b/frontend/src/styles/dark.css
@@ -70,7 +70,7 @@
 #dark .login-image {
     position: relative;
     display: inline;
-    height: 700px;
+    height: auto;
 }
   
 #dark .login-image::after {
@@ -89,7 +89,7 @@
 }
 
 #dark .form {
-    height: 700px;
+    height: auto;
     background-color: rgb(50, 50, 50);
     color: white;
 }
